tests/src/frontend/typechecking/invalid/superfluous_return3.sk
fun main(): void {
  None() match {
  | None() -> return void
  }
}
